# piprm

./: .envrc  .gitignore  README.md  pyproject.toml
piprm/: __init__.py  exceptions.py  http_tools.py  pip_tools.py  registry.py
piprm/cmd/: main.py
piprm/manager/: __init__.py  factory.py  pdm.py  pip.py
